--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Unique, Handcrafted Instruments</div>
         <!--<div class="intro-heading text-uppercase">great for the beginner or professional.</div>-->
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">About OTBI</a>
+       <! <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">About OTBI</a> -->
       </div>
     </div>
   </header>
