--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           A variety of techniques create abstract, vibrant artwork for each instrument. Each is then sealed with a water-based finish. <br><br>
 
-          Outside-The Box-Instruments are great for the beginner or professional. <br><br>
+          Outside-The Box-Instruments are great for the beginner or professional! <br><br>
           
           Find us on Etsy soon!  
         </div>
@@ -112,7 +112,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/2.jpg" alt="">
+            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -124,7 +124,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/1.jpg" alt="">
+            <img class="img-fluid" src="img/201906 Ganglion Smile - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -136,7 +136,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/2.jpg" alt="">
+            <img class="img-fluid" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -210,7 +210,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/201902 Solar Mix - Angled.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -238,7 +238,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/1.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/201906 Ganglion Smile - Angled.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -266,7 +266,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
