--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           A variety of techniques create abstract, vibrant artwork for each instrument. Each is then sealed with a water-based finish. <br><br>
 
-          A short-scale neck and low-tension strings make them easy to play. Models are available in diatonic (dulcimer) tuning and standard chromatic tuning. Both fretted and unfretted (slide) configurations are available. <br> <br>
+          A short-scale neck and low-tension strings make these instruments easy to play. Models are available in diatonic (dulcimer) tuning and standard chromatic tuning. Both fretted and unfretted (slide) configurations are available. <br> <br>
 
           Outside-The Box-Instruments are great for the beginner or professional! <br><br>
           
