--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
 
           A variety of techniques create abstract, vibrant artwork for each instrument. Each is then sealed with a water-based finish. <br><br>
 
-          A short-scale neck and low-tension strings make these instruments easy to play. Models are available in diatonic (dulcimer) tuning and standard chromatic tuning. Both fretted and unfretted (slide) configurations are available. <br> <br>
+          A short-scale neck and low-tension strings make these instruments easy to play. Models are available in diatonic (dulcimer) and standard chromatic tunings. Both fretted and unfretted (slide) configurations are available. <br> <br>
 
           Outside-The Box-Instruments are great for the beginner or professional! <br><br>
           
+          Commissions for custom instruments are accepted. <br> 
           Find us on Etsy soon!  
         </div>
         <div class="col-md-4">
