--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
           Outside-The Box-Instruments are great for the beginner or professional! <br><br>
           
-          Commissions for custom instruments are accepted. <br> 
+          Commissions for custom instruments are accepted. <br><br>
+          
           Find us on Etsy soon!  
         </div>
         <div class="col-md-4">
@@ -102,7 +103,7 @@
         <div class="col-lg-12 text-center">
             <img width="10%" src="img/OTBILogo.png"></img>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h3 class="section-subheading text-muted">To see what's currently available, visit our Etsy store. </h3>
+          <h3 class="section-subheading text-muted">Example of past instruments. To see what's currently available, visit our Etsy store. </h3>
         </div>
       </div>
       <div class="row">
