--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           Outside-The-Box Instruments are fun to see, play, and hear. Each is unique and handcrafted from water-based paints and sustainable woods. <br> <br>
 
-          Each instrument is enhanced with vibrant artwork and sealed with a water-based finish. <br><br>
+          Each instrument is enhanced with vibrant artwork and sealed with water-based finish. <br><br>
 
           A short-scale neck and low-tension strings make these instruments easy to play. Models are available in diatonic (dulcimer) and standard chromatic tunings. Both fretted and unfretted (slide) configurations are available. <br> <br>
 
