--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           Each instrument is enhanced with vibrant artwork and sealed with water-based finish. <br><br>
 
-          A short-scale neck and low-tension strings make these instruments easy to play. Models are available in diatonic (dulcimer) and standard chromatic tunings. Both fretted and unfretted (slide) configurations are available. <br> <br>
+          A short-scale neck and low-tension strings make Outside The Box Instruments easy to play. Models are available in diatonic (dulcimer) and standard chromatic tunings. Both fretted and unfretted (slide) configurations are available. <br> <br>
 
           Outside-The Box-Instruments are great for the beginner or professional! <br><br>
           
