--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4">
-          Outside-The-Box Instruments are fun to see, play, and hear. Each is unique and handcrafted from water-based paints and sustainable woods. <br> <br>
+          Outside-The-Box Instruments are fun to see, play, and hear. All are unique and handcrafted from water-based paints and sustainable woods. <br> <br>
 
           Each instrument is enhanced with vibrant artwork and sealed with water-based finish. <br><br>
 
