--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4">
-          Outside-The-Box Instruments are a pleasure to the eye, hand, and ear. All are handcrafted and each is unique. <br> <br>
+          Outside-The-Box Instruments are a pleasure to the eye, hand, and ear. All are handcrafted and each one unique. <br> <br>
 
           Instruments begin with vibrant artwork in water-based paint, sealed with water-based finish. <br><br>
           
