--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           Outside-The-Box Instruments are a pleasure to the eye, hand, and ear. All are handcrafted and each one unique. <br> <br>
 
-          Instruments begin with vibrant artwork in acrylic paint, sealed with water-based finish. <br><br>
+          Instruments begin with vibrant artwork in acrylic paint, protected with water-based finish. <br><br>
           
           Made of sustainable woods, the small body and short-scale neck's low-tension strings make Outside-The-Box Instruments easy to play. Choose from diatonic (dulcimer) or standard chromatic tunings. <br> <br>
           
