--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Outside-The-Box Instruments are fun to see, play, and hear.">
+  <meta name="description" content="Outside-The-Box Instruments are a pleasure for eye, hand, and ear.">
   <meta name="author" content="Jonathan Reynolds">
 
   <title>Outside-The-Box Instruments</title>
