--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4">
-          Outside-The-Box Instruments are a pleasure for eye, hand, and ear. Handcrafted with care, each one is unique. <br> <br>
+          Outside-The-Box Instruments are a pleasure for eye, hand, and ear. Each one is unique and handcrafted with care. <br> <br>
 
           Instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
           
