--- a/index.html
+++ b/index.html
@@ -134,6 +134,32 @@
           <div class="portfolio-caption">
           </div>
         </div>
+
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+          </div>
+        </div>        
+        
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+          </div>
+        </div>
                 
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
