--- a/index.html
+++ b/index.html
@@ -109,18 +109,6 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-          </div>
-        </div>
 
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
@@ -142,7 +130,20 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201911 5173F - Angled.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/201914 Dream Hotel - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -155,7 +156,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201922 Billions and Billions - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
