--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201911 5173F - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201904 Neuron 2 - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -143,7 +143,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201914 Dream Hotel - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201904 Neuron 2 - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -156,7 +156,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201922 Billions and Billions - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201905 Heat Rises - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -182,7 +182,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201908 Children Play - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -195,7 +195,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201909 Mob Rule #8 - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -208,7 +208,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201911 5173F - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -221,7 +221,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201912 Submerge - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -234,7 +234,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201914 Dream Hotel - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -247,7 +247,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201916 Ganglion Smile - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -260,7 +260,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
