--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/201909 Mob Rule #8 - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/201909 Mob Rule 8 - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
