--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201904 Neuron 2 - Angled.jpg" alt="">
@@ -143,7 +143,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201905 Heat Rises - Angled.jpg" alt="">
@@ -157,7 +157,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201908 Children Play - Angled.jpg" alt="">
@@ -171,7 +171,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201909 Mob Rule 8 - Angled.jpg" alt="">
@@ -185,7 +185,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201911 5173F - Angled.jpg" alt="">
@@ -199,7 +199,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201912 Submerge - Angled.jpg" alt="">
@@ -213,7 +213,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201914 Dream Hotel - Angled.jpg" alt="">
@@ -227,7 +227,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201916 Ganglion Smile - Angled.jpg" alt="">
@@ -241,7 +241,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
@@ -255,7 +255,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201920 External Faith - Angled 2.jpg" alt="">
@@ -269,7 +269,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <!-- <i class="fas fa-plus fa-3x"></i> -->
               </div>
             </div>
             <img class="img-fluid" src="img/201922 Billions and Billions - Angled.jpg" alt="">
