--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="col-lg-12 text-center">
             <img width="10%" src="img/OTBILogo.png"></img>
           <h2 class="section-heading text-uppercase">Contact</h2>
-          <h3 id="questions" class="section-subheading">We would love to hear from you! use the form below to get in touch.</h3>
+          <h3 id="questions" class="section-subheading">We would love to hear from you!</h3>
         </div>
       </div>
       <div class="row">
