--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201902 Solar Mix - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
