--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201904 Neuron 2 - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG004 Neuron 2 - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -415,7 +415,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201905 Heat Rises - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG005 Heat Rises - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -443,7 +443,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201908 Children Play - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG008 Children Play - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -471,7 +471,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201909 Mob Rule 8 - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG009 Mob Rule No 8 - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -499,7 +499,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201911 5173F - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG011 5173F - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -527,7 +527,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201912 Submerge - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG012 Submerge - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -555,7 +555,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201914 Dream Hotel - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG014 Dream Hotel - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -583,7 +583,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201916 Ganglion Smile - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG016 Ganglion Smile - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -611,7 +611,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG018 Seymore's Revenge - Angled - cropped.jpg	" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -639,7 +639,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201920 External Faith - Angled 2.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG020 External Faith - Angled - cropped.jpg	" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -667,7 +667,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/201922 Billions and Billions - Angled.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG022 Billions and Billions - Angled - cropped.jpg" alt="">
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
