--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/2019SG002 Solar Mix - Angled - cropped.jpg" alt="">
+            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
