--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
+                Solar Mix
 
                 <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angled - cropped.jpg" alt="">
 
