--- a/index.html
+++ b/index.html
@@ -360,11 +360,10 @@
                 <!-- Project Details Go Here -->
 
                 <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angled - cropped.jpg" alt="">
-                <br>
                 Solar Mix
                 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
+                  <!-- <i class="fas fa-times"></i> -->
                   Close</button>
               </div>
             </div>
