--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                 <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angled - cropped.jpg" alt="">
                 Solar Mix
                 
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <!-- <i class="fas fa-times"></i> -->
-                  Close</button>
+                <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
+                     <i class="fas fa-times"></i>
+                  Close</button> -->
               </div>
             </div>
           </div>
