--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                 <!-- Project Details Go Here -->
 
                 <img class="img-fluid d-block mx-auto" src="img/2019SG012 Submerge - Angled - cropped.jpg" alt="">
-                Submerged
+                Submerge
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
