--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angle - White No Line - rotated.jpg" alt="">
                 Solar Mix
                 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
