--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201902 Solar Mix - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG002 Solar Mix.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -134,7 +134,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201904 Neuron 2 - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG004 Neuron 2.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -149,7 +149,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201905 Heat Rises - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG005 Heat Rises.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -164,7 +164,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201908 Children Play - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG008 Children Play.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -179,7 +179,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201909 Mob Rule 8 - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG009 Mob Rule No 8.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -194,7 +194,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201911 5173F - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG011 5173F.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -209,7 +209,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201912 Submerge - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG012 Submerge.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -224,7 +224,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201914 Dream Hotel - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG014 Dream Hotel.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -239,7 +239,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201916 Ganglion Smile - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG016 Ganglion Smile.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -254,7 +254,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201918 Seymore's Revenge - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG018 Seymore's Revenge.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -269,7 +269,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201920 External Faith - Angled 2.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG020 External Faith.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -284,7 +284,7 @@
               </div>
             </div>
             <br>
-            <img class="img-fluid" src="img/201922 Billions and Billions - Angled.jpg" alt="">
+            <img class="img-fluid" src="img/2019SG022 Billions and Billions.jpg" alt="">
           </a>
           <div class="portfolio-caption">
           </div>
@@ -359,7 +359,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix - Angle - White No Line - rotated.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix.jpg" alt="">
                 Solar Mix
                 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -389,7 +389,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG004 Neuron 2 - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG004 Neuron 2.jpg" alt="">
                 Neuron 2
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -419,7 +419,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG005 Heat Rises - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG005 Heat Rises.jpg" alt="">
                 Heat Rises
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -449,7 +449,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG008 Children Play - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG008 Children Play.jpg" alt="">
                 Children Play
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -479,7 +479,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG009 Mob Rule No 8 - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG009 Mob Rule No 8.jpg" alt="">
                 Mob Rule #8
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -509,7 +509,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG011 5173F - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG011 5173F.jpg" alt="">
                 5173F
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -539,7 +539,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG012 Submerge - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG012 Submerge.jpg" alt="">
                 Submerge
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -569,7 +569,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG014 Dream Hotel - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG014 Dream Hotel.jpg" alt="">
                 Dream Hotel
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -599,7 +599,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG016 Ganglion Smile - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG016 Ganglion Smile.jpg" alt="">
                 Ganglion Smile
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -629,7 +629,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG018 Seymore's Revenge - Angled - cropped.jpg	" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG018 Seymore's Revenge.jpg	" alt="">
                 Seymore's Revenge
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -659,7 +659,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG020 External Faith - Angled - cropped.jpg	" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG020 External Faith.jpg	" alt="">
                 External Faith
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -689,7 +689,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
 
-                <img class="img-fluid d-block mx-auto" src="img/2019SG022 Billions and Billions - Angled - cropped.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/2019SG022 Billions and Billions.jpg" alt="">
                 Billions and Billions
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
