--- a/index.html
+++ b/index.html
@@ -360,7 +360,12 @@
                 <!-- Project Details Go Here -->
 
                 <img class="img-fluid d-block mx-auto" src="img/2019SG002 Solar Mix.jpg" alt="">
-                Solar Mix
+                Solar Mix <br> <br>
+                
+                Red Oak, Pine, Poplar, Maple, Paduk <br>
+                Offset sound hole, acoustic side port <br>
+                Key of D Major, tuned D-A-D <br>
+                23-inch Scale
                 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                      <i class="fas fa-times"></i>
