--- a/index.html
+++ b/index.html
@@ -750,7 +750,8 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Slide guitar, tuned D-A-D <br>
-                Fretted chromatic, 23-inch scale
+                Fretted chromatic, 23-inch scale <br>
+                Internal piezo pickup
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
