--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Fretless, tuned D-A-D <br>
-                23-inch scale
+                Bolt nut, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -750,7 +750,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Slide guitar, tuned D-A-D <br>
-                Fretted chromatic, 23-inch scale <br>
+                Bolt nut, fretted chromatic, 23-inch scale <br>
                 Internal piezo pickup
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
