--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
                 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                      <i class="fas fa-times"></i>
@@ -400,7 +400,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Center sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -435,7 +435,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -470,7 +470,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Center sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -505,7 +505,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -540,7 +540,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -575,7 +575,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Center sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -610,7 +610,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -645,7 +645,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Center sound hole, acoustic side port <br>
                 Key of D Major, tuned D-A-D <br>
-                Diatonic, 23-inch scale
+                Diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -715,7 +715,7 @@
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
                 Slide guitar, tuned D-A-D <br>
-                Fretted diatonic, 23-inch scale
+                Fretted diatonic, zero fret, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
