--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Unique, Handcrafted Musical Instruments</div>
+        <div class="intro-lead-in">Unique, Handcrafted<br>
+          Musical Instruments</div>
         <!--<div class="intro-heading text-uppercase">great for the beginner or professional.</div>-->
        <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">About OTBI</a> -->
       </div>
