--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           Instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
          
-          Built of sustainable woods, their small body and short-scale neck make Outside-The-Box Instruments easy to play. Each is ergonomically balanced for comfort. <br> <br>
+          Built of sustainable woods, their small body and short-scale neck make Outside-The-Box Instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
           Designed to play only the notes of the major scale, they are perfect for the beginner or musician seeking creative inspiration. <br> <br>
 
