--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4">
-          Outside-The-Box Instruments are a pleasure for eye, hand, and ear. Each is unique and handcrafted with care. <br> <br>
+          Outside-The-Box Instruments are a visual, tactile, and musical treat. Each is unique and handcrafted with care. <br> <br>
 
           Instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
          
-          Built only of sustainable woods, a small body and short-scale neck make Outside-The-Box Instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
+          Built only of sustainable woods; a small body and short-scale neck make Outside-The-Box Instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
           Designed to play only the notes of a major scale, they are perfect for the beginner or musician seeking creative inspiration. <br> <br>
 
