--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          
           Built only of sustainable woods; a small body and short-scale neck make Outside-The-Box Instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
-          Designed to play only the notes of a major scale, they are perfect for the beginner or musician seeking creative inspiration. <br> <br>
+          Designed to sound only the notes of a major scale, they are perfect for the beginner or musician seeking creative inspiration. <br> <br>
 
           Outside-The-Box Instruments make beautiful music and enhance the look of every room. <br><br>
  
