--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <div class="col-md-4">
           Outside-The-Box Instruments are a visual, tactile, and musical treat. Each is unique and handcrafted with care. <br> <br>
 
-          Instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
+          Built only of sustainable woods, instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
          
-          Built only of sustainable woods; a small body and short-scale neck make Outside-The-Box Instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
+          Thier small body and short-scale neck make Outside-The-Box Instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
           Designed to sound only the notes of a major scale, they are perfect for the beginner or musician seeking creative inspiration. <br> <br>
 
