--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
  
           Chromatic fretting and other options are available on request. <br><br>
           
-          Find us on Etsy September 30!  
+          Find us on Etsy starting September 30!  
         </div>
         <div class="col-md-4">
         </div>
