--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
              
           Designed to sound only the notes of a major scale, they are perfect for the beginner or musician seeking creative inspiration. <br> <br>
 
-          Outside-The-Box Instruments make beautiful music and enhance the look of every room. <br><br>
+          Outside-The-Box Instruments make beautiful music and enhance the look of every room! <br><br>
  
           Chromatic fretting and other options are available on request. <br><br>
           
