--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           Built only of sustainable woods, instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
          
-          A small body and short-scale neck make these instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
+          A compact body and short-scale neck make these instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
           Designed to sound only the notes of a major scale, they are perfect for the beginner or accomplished player seeking creative inspiration. <br> <br>
 
