--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-md-4">
           Outside-The-Box Instruments are a visual, tactile, and musical treat. Each is unique and handcrafted with care. <br> <br>
 
-          Built only of sustainable woods, instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
+          Built with sustainable woods, instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
          
           A compact body and short-scale neck make these instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
