--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          
           A compact body and short-scale neck make these instruments lightweight and easy to play. Each is ergonomically balanced for comfort. <br> <br>
              
-          Designed to sound only the notes of a major scale, they are perfect for the beginning player or accomplished musician seeking creative inspiration. <br> <br>
+          Designed to sound only the notes of a major scale, they are perfect for the beginning player to accomplished musician seeking creative inspiration. <br> <br>
 
           Outside-The-Box Instruments make beautiful music and enhance the look of every room! <br><br>
  
