--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                 
                 Red Oak, Pine, Poplar, Maple, Paduk <br>
                 Offset sound hole, acoustic side port <br>
-                Fretless, tuned D-A-D <br>
+                Fretless slide, tuned D-A-D <br>
                 Bolt nut, 23-inch scale
 
                 <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
