--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <meta name="description" content="Outside-The-Box Instruments are a pleasure for eye, hand, and ear.">
   <meta name="author" content="Jonathan Reynolds">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144022515-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+  g tag('config', 'UA-144022515-1');
+  </script>
+
   <title>Outside-The-Box Instruments</title>
 
   <!-- Bootstrap core CSS -->
