--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-md-4">
           Outside-The-Box Instruments are a visual, tactile, and musical treat. Each is unique and handcrafted with care. <br> <br>
 
-          Built with sustainable woods, instruments begin with vibrant artwork created in acrylic paint with water-based finish. <br><br>
+          Built with sustainable woods, instruments begin with vibrant acrylic artwork and water-based finish. <br><br>
          
           A compact body and short-scale neck make these instruments lightweight, balanced, and easy to play. <br> <br>
              
