--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           Outside-The-Box Instruments make beautiful music and enhance the look of every room! <br><br>
  
-          Chromatic fretting and other options are available on request. <br><br>
+          Chromatic fretting, left-handed, and other options are available on request. <br><br>
           
           Find us on Etsy starting September 30!  
         </div>
