--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img width="10%" src="img/OTBILogo.png"></img>
           <br> <br>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h3 class="section-subheading text-muted">Examples of prior instruments. To see what's currently available, visit our Etsy Shop starting September 30! </h3>
+          <h3 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our Etsy Shop starting September 30! </h3>
         </div>
       </div>
       <div class="row">
