--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link js-scroll-trigger" href="#instruments">Instruments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#">Etsy</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.etsy.com/shop/OTBIstudio">Etsy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
