--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
  
           Chromatic fretting, left-handed, and other options are available on request. <br><br>
           
-          Find us on Etsy in January!  
+          <a class="nav-link js-scroll-trigger" href="https://www.etsy.com/shop/OTBIstudio">Etsy</a>  
         </div>
         <div class="col-md-4">
         </div>
