--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
  
           Chromatic fretting, left-handed, and other options are available on request. <br><br>
           
-          <a class="nav-link js-scroll-trigger" href="https://www.etsy.com/shop/OTBIstudio">Etsy</a>  
         </div>
         <div class="col-md-4">
         </div>
@@ -118,8 +117,9 @@
             <img width="10%" src="img/OTBILogo.png"></img>
           <br> <br>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h3 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our Etsy shop in January 2020! </h3>
-        </div>
+          <h3 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our Etsy shop!</h3>
+          <a class="nav-link js-scroll-trigger" href="https://www.etsy.com/shop/OTBIstudio">Etsy</a>
+      </div>
       </div>
       <div class="row">
 
