--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             <img width="10%" src="img/OTBILogo.png"></img>
           <br> <br>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h3 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our 
-          <a class="nav-link js-scroll-trigger" href="https://www.etsy.com/shop/OTBIstudio">Etsy Shop!</a> </h3>
+          <h3 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a class="nav-link js-scroll-trigger" href="https://www.etsy.com/shop/OTBIstudio">Etsy Shop!</a> </h3>
       </div>
       </div>
       <div class="row">
