--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <img width="10%" src="img/OTBILogo.png"></img>
           <br> <br>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h2 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a href="https://www.etsy.com/shop/OTBIstudio"><h2 Etsy Shop!</h2></a> </h3>
+          <h2 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a href="https://www.etsy.com/shop/OTBIstudio"><bold>Etsy Shop!</bold></h2></a> 
       </div>
       </div>
       <div class="row">
