--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
             <img width="10%" src="img/OTBILogo.png"></img>
           <br> <br>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h2 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a href="https://www.etsy.com/shop/OTBIstudio"><bold>Etsy Shop!</bold></h2></a> 
+          <h2 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a href="https://www.etsy.com/shop/OTBIstudio"><bold>Etsy Shop!</bold> or our </h2></a> 
         
-        <a href="https://reverb.com/shop/outside-the-box-instruments"><img alt="Shop My Store on Reverb" src="https://static.reverb-assets.com/assets/shops/buttons/120x60-black-en-75d39e8611dc85dd70be3990b1e933de6ddcae6f56b9a4169e471e0939be71f3.png" /></a>
+        <a href="https://reverb.com/shop/outside-the-box-instruments">Reverb store!</a>
         
       </div>
       </div>
