--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <img width="10%" src="img/OTBILogo.png"></img>
           <br> <br>
           <h2 class="section-heading text-uppercase">Instruments</h2>
-          <h2 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a href="https://www.etsy.com/shop/OTBIstudio"><bold>Etsy Shop</bold></a> or our <a href="https://reverb.com/shop/outside-the-box-instruments"><bold>Reverb store!</bold></a>
+          <h2 class="section-subheading text-muted">Examples of recent instruments. To see what's currently available, visit our <a href="https://www.etsy.com/shop/OTBIstudio"><bold>Etsy Shop</bold></a> and our <a href="https://reverb.com/shop/outside-the-box-instruments"><bold>Reverb Store!</bold></a>
         
       </div>
       </div>
